--- a/HTML5 - CSS3/assets/css/styles.css
+++ b/HTML5 - CSS3/assets/css/styles.css
@@ -8,18 +8,19 @@
 
 body {
   background-image: url("../images/pattern.jpg");
+  border: 3px solid blue;
 }
 
+/* HEADER */
 #header {
   border: 3px solid red;
   min-width: 1024px;
-  width: 99%;
+  width: 100%;
   height: 250px;
   margin: 0px auto;
 }
 
 #header #logo {
-  border: 3px solid red;
   width: 770px;
   margin: 0px auto;
   padding-top: 20px;
@@ -41,11 +42,88 @@ body {
   text-shadow: 2px 2px 0px rgb(100, 94, 94);
 }
 
-#header h1:hover {
-  text-shadow: 2px 2px 0px rgb(100, 94, 94), 0px 2px 3px #1572b6;
-}
-
 #header h1 a {
   color: #1572b6;
   text-decoration: none;
+}
+
+#header h1 a:hover {
+  text-shadow: 2px 2px 0px rgb(100, 94, 94), 0px 2px 3px #1572b6;
+}
+
+/* BARRA DE NAVEGACION */
+#menu {
+  border: 3px solid yellow;
+  width: 100%;
+  height: 40px;
+  margin: 0px auto;
+  background: #333;
+  box-shadow: 0px 0px 2px gray;
+  color: white;
+  font-size: 15px;
+}
+
+#menu ul {
+  list-style: none;
+  margin: 0px auto;
+  width: 1160px;
+}
+
+#menu > ul > li {
+  line-height: 40px;
+  float: left;
+  border-right: 1px solid gray;
+  transition: all 300ms;
+}
+
+#menu > ul > li:hover {
+  background-color: #33a9dc;
+  text-decoration: underline;
+  box-shadow: 0px 0px 4px #1572b6 inset;
+}
+
+#menu > ul > li > a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#menu > ul > li > a:first-child {
+  border-left: 1px solid gray;
+}
+
+/* MENUS DESPLEGABLE */
+#menu > ul > li > ul {
+  display: none;
+  position: absolute;
+  width: 150px;
+  z-index: 1;
+}
+
+#menu > ul > li:hover > ul {
+  display: block;
+}
+
+#menu > ul > li:hover > ul > li {
+  background-color: #f2f1f0;
+  border-bottom: 1px solid #d6d6d6;
+  padding: 8px;
+  line-height: 25px;
+  font-size: 13px;
+}
+
+#menu > ul > li:hover > ul > li > a {
+  text-decoration: none;
+  color: #666;
+  text-align: left;
+  transition: all 300ms;
+}
+
+#menu > ul > li:hover > ul > li:hover {
+  background: rgb(202, 199, 199);
+  box-shadow: 0px 0px 2px #666 inset;
+  font-weight: bold;
+  cursor: pointer;
 }
