Maquetacion del Sidebar

--- a/HTML5 - CSS3/assets/css/styles.css
+++ b/HTML5 - CSS3/assets/css/styles.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
+/* FORMATO GENERAL */
+
 * {
   margin: 0px;
   padding: 0px;
@@ -11,9 +13,65 @@ body {
   border: 3px solid blue;
 }
 
+/* ENLACES */
+a {
+  color: #33a9dc;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #1572b6;
+  text-decoration: underline;
+  transition: all 300ms;
+}
+
+/* FORMULARIOS */
+input[type="text"],
+input[type="email"],
+input[type="password"],
+select {
+  border: 1px solid #c9c9c9;
+  box-shadow: 0px 0px 1px #ccc inset;
+  background: white;
+  padding: 1px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  color: gray;
+  transition: all 300ms;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+select:focus {
+  border: 3px solid #1572b6;
+  color: black;
+}
+
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button {
+  display: block;
+  border: 1px solid #1572b6;
+  border-radius: 2px;
+  width: 60px;
+  padding: 3px;
+  background-color: #33a9dc;
+  color: #eee;
+  cursor: pointer;
+}
+
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+button:hover {
+  box-shadow: 0px 0px 2px gray;
+  text-decoration: underline;
+}
+
 /* HEADER */
 #header {
-  border: 3px solid red;
   min-width: 1024px;
   width: 100%;
   height: 250px;
@@ -53,7 +111,6 @@ body {
 
 /* BARRA DE NAVEGACION */
 #menu {
-  border: 3px solid yellow;
   width: 100%;
   height: 40px;
   margin: 0px auto;
@@ -126,4 +183,95 @@ body {
   box-shadow: 0px 0px 2px #666 inset;
   font-weight: bold;
   cursor: pointer;
+}
+
+/* CONTENIDO */
+#content {
+  border: 2px solid red;
+  width: 1250px;
+  min-height: 1100px;
+  margin: 0px auto;
+}
+
+/* SIDEBAR */
+#sidebar,
+#quote {
+  clear: both;
+  width: 200px;
+  float: left;
+  margin: 30px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 2px 2px #ccc;
+}
+
+#quote {
+  width: 180px;
+  padding: 10px;
+  font-size: 14px;
+}
+
+#sidebar .widget {
+  display: block;
+  width: 180px;
+  margin: 5px auto;
+  padding: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 14px;
+  border-bottom: 1px dashed #333;
+}
+
+#sidebar .widget:last-child {
+  margin-bottom: 20px;
+}
+
+#sidebar h3 {
+  display: block;
+  width: 100%;
+  color: #333;
+  text-align: center;
+  margin-bottom: 15px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  background: #f2f3f2;
+  border-bottom: 1px solid #ccc;
+}
+#sidebar > div:nth-child(2) > h3 {
+  color: rgb(150, 2, 46);
+}
+
+#sidebar > div:nth-child(3) > h3 {
+  color: rgb(61, 150, 2);
+}
+
+#sidebar li {
+  margin: 8px 0px 5px 20px;
+  list-style: square;
+}
+
+/* FORMULARIOS SIDEBAR */
+#sidebar div label,
+#sidebar div input[type="text"],
+#sidebar div input[type="email"],
+#sidebar div input[type="password"],
+#sidebar div a {
+  display: block;
+  width: 95%;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+#sidebar div input[type="button"],
+#sidebar div input[type="submit"],
+#sidebar div input[type="reset"],
+#sidebar div button {
+  margin-top: 6px;
+  margin-bottom: 10px;
+}
+
+#sidebar input,
+#sidebar label {
+  margin: 0px auto;
+  text-align: center;
 }
