--- a/HTML5, CSS3 - AVANZADO/assets/css/styles.css
+++ b/HTML5, CSS3 - AVANZADO/assets/css/styles.css
@@ -3,7 +3,6 @@
 
 /* NAVBAR */
 @import url("https://fonts.googleapis.com/css2?family=Cutive&display=swap");
-/* font-family: 'Cutive', serif; */
 
 /* TARJETAS */
 @import url("https://fonts.googleapis.com/css2?family=Gruppo&display=swap");
@@ -79,4 +78,32 @@ body {
 	margin-top: 4px;
 	margin-right: 30px;
 	transition: all 300ms;
+}
+
+/* BARRA DE NAVEGACION */
+#menu {
+	float: right;
+	height: 70px;
+	background: transparent;
+}
+
+#menu ul li {
+	display: inline-block;
+	margin: 0px 20px 0px 20px;
+	font-size: 20px;
+	font-family: "Cutive", serif;
+	letter-spacing: 1px;
+	line-height: 73px;
+}
+
+#menu ul li a {
+	display: block;
+	color: white;
+	text-decoration: none;
+	transition: all 200ms;
+}
+
+#menu ul li a:hover {
+	color: #49aa99;
+	transform: scale(1.1, 1.1);
 }
