--- a/HTML5, CSS3 - AVANZADO/assets/css/styles.css
+++ b/HTML5, CSS3 - AVANZADO/assets/css/styles.css
@@ -42,7 +42,6 @@ body {
 
 /* HEADER */
 #header {
-	border: 1px solid red;
 	width: 100%;
 	height: 70px;
 	background-color: #343b5e;
@@ -106,4 +105,26 @@ body {
 #menu ul li a:hover {
 	color: #49aa99;
 	transform: scale(1.1, 1.1);
+}
+
+/* BANNER */
+#banner {
+	width: 98%;
+	height: 100px;
+	border: 10px solid white;
+	box-shadow: 0px 0px 2px gray;
+	background-color: #49aa99;
+	margin: 20px auto;
+}
+
+#banner h1 {
+	display: block;
+	width: 850px;
+	color: white;
+	margin: 27px auto;
+	font-size: 50px;
+	font-family: "Gruppo", cursive;
+	letter-spacing: 2px;
+	text-align: center;
+	text-shadow: 3px 3px 2px #343b5e;
 }
