--- a/HTML5, CSS3 - AVANZADO/assets/css/styles.css
+++ b/HTML5, CSS3 - AVANZADO/assets/css/styles.css
@@ -10,7 +10,6 @@
 
 /* SECCION PRINCIPAL */
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap");
-/* font-family: 'Oxygen', sans-serif; */
 
 @font-face {
 	font-family: "icons";
@@ -23,6 +22,10 @@
 		url("../fonts/WebSymbols-Regular/WebSymbols-Regular.ttf") format("ttf");
 	font-weight: normal;
 	font-style: normal;
+}
+
+.icon {
+	font-family: "icons";
 }
 
 /* GENERALES */
@@ -169,4 +172,172 @@ body {
 	font-family: "Atkinson Hyperlegible", sans-serif;
 	text-align: center;
 	color: #343b5e;
+}
+
+/* SIDEBAR */
+#sidebar {
+	width: 300px;
+	min-height: 1050px;
+	font-family: "Oxygen", sans-serif;
+	float: right;
+}
+
+#sidebar h3 {
+	display: block;
+	width: auto;
+	height: 45px;
+	padding-left: 15px;
+	margin-top: 30px;
+	margin-bottom: 15px;
+	font-size: 22px;
+	font-family: "Atkinson Hyperlegible", sans-serif;
+	line-height: 50px;
+	letter-spacing: 1px;
+	background-color: #bec9cb;
+	box-shadow: 0px 1px 0px #393d3f, 1px 2px 0px #393d3f, 2px 3px 0px #393d3f,
+		3px 4px 0px #393d3f;
+}
+
+#search {
+	width: 85%;
+	height: 30px;
+	margin-left: 20px;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-shadow: 1px 1px 4px #ccc inset;
+}
+
+#sidebar input[type="text"] {
+	width: 85%;
+	height: 29px;
+	border: none;
+	padding-left: 5px;
+	border-radius: 5px;
+	background-color: transparent;
+	color: rgb(161, 161, 161);
+	transition: all 300ms;
+}
+
+#sidebar input[type="text"]:focus {
+	outline: none;
+	color: #555;
+}
+
+#sidebar input[type="button"],
+#sidebar input[type="submit"] {
+	height: 30px;
+	font-size: 16px;
+	color: #555;
+	background-color: transparent;
+	border: none;
+	border-left: 1px solid #ccc;
+	padding-left: 6px;
+	cursor: pointer;
+}
+
+.sidebar-box {
+	width: 85%;
+	height: 240px;
+	margin: 0px auto;
+	margin-top: 20px;
+	padding-top: 2px;
+	background-color: white;
+	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.3),
+		0px 1px white inset, 0px -3px 2px rgba(0, 0, 0, 0.3) inset;
+}
+
+#login input[type="email"],
+#login input[type="password"] {
+	display: block;
+	width: 81%;
+	height: 30px;
+	margin: 0px auto;
+	margin-top: 20px;
+	padding-left: 35px;
+	border: 1px solid #ccc;
+	color: grey;
+	box-shadow: 1px 1px 1px #ccc inset;
+	border-radius: 5px;
+}
+
+#login input[type="email"]:focus,
+#login input[type="password"]:focus {
+	outline: none;
+	color: #555;
+	box-shadow: 1px 1px 1px gray inset;
+}
+
+#login #user,
+#login #cypher {
+	display: block;
+	height: 30px;
+	text-align: center;
+	position: absolute;
+	margin-left: 15px;
+	margin-top: 6px;
+}
+
+#login #cypher {
+	margin-top: 25px;
+	margin-left: 18px;
+	font-size: 20px;
+}
+
+#login input[type="button"],
+#login input[type="submit"],
+#login input[type="reset"],
+#login button {
+	text-align: center;
+	width: 100px;
+	height: 35px;
+	margin-top: 20px;
+	margin-left: 13px;
+	margin-right: 12px;
+	margin-bottom: 20px;
+	background: linear-gradient(to bottom, #53c7b2 0%, #49aa99 100%);
+	border: 1px solid #028b72;
+	color: white;
+	font-size: 16px;
+	font-weight: lighter;
+	cursor: pointer;
+	transition: all 300ms;
+}
+
+#login input[type="button"]:hover,
+#login input[type="submit"]:hover,
+#login input[type="reset"]:hover,
+#login button:hover {
+	box-shadow: 0px 0px 3px gray;
+	font-size: 15px;
+}
+
+#login a {
+	display: block;
+	margin-left: 18px;
+	text-decoration: none;
+	color: #555;
+	font-size: 14px;
+}
+
+#login a:hover {
+	text-decoration: underline;
+	color: #49aa99;
+	font-weight: bold;
+}
+
+#social {
+	height: 185px;
+}
+
+#social a {
+	display: block;
+	margin: 10px 30px 10px 30px;
+	font-size: 30px;
+	color: #333;
+	text-decoration: none;
+}
+
+#sponsors {
+	height: 185px;
 }
