Maquetacion del Footer

--- a/HTML5, CSS3 - AVANZADO/assets/css/styles.css
+++ b/HTML5, CSS3 - AVANZADO/assets/css/styles.css
@@ -43,6 +43,11 @@ body {
 	margin: 0px auto;
 }
 
+.clearfix {
+	float: none;
+	clear: both;
+}
+
 /* HEADER */
 #header {
 	width: 100%;
@@ -106,7 +111,7 @@ body {
 }
 
 #menu ul li a:hover {
-	color: #6fc7a9;
+	color: #6cdafa;
 	transform: scale(1.1, 1.1);
 }
 
@@ -116,7 +121,7 @@ body {
 	height: 100px;
 	border: 10px solid white;
 	box-shadow: 0px 0px 2px gray;
-	background-color: #6fc7a9;
+	background-color: #59b2a8;
 	margin: 20px auto;
 }
 
@@ -164,7 +169,7 @@ body {
 	font-family: "Gruppo", cursive;
 	text-shadow: 1px 0px 1px #343b5e;
 	text-align: center;
-	color: #284180;
+	color: #3142be;
 	text-shadow: 1px 0px 1px #2b79a4;
 }
 
@@ -298,7 +303,7 @@ body {
 	margin-left: 13px;
 	margin-right: 12px;
 	margin-bottom: 20px;
-	background: linear-gradient(to bottom, #6fc7a9 0%, #49aa99 100%);
+	background: linear-gradient(to bottom, #59b2a8 0%, #49aa99 100%);
 	border: 1px solid #028b72;
 	color: white;
 	font-size: 16px;
@@ -325,7 +330,7 @@ body {
 
 #login a:hover {
 	text-decoration: underline;
-	color: #49aa99;
+	color: #59b2a8;
 	font-weight: bold;
 }
 
@@ -441,7 +446,98 @@ body {
 }
 
 #blog a:hover {
-	color: #6fc7a9;
+	color: #61a8ed;
 	font-weight: bold;
 	text-shadow: 2px 0px 2px #2b79a4;
+}
+
+/* FOOTER */
+#footer {
+	width: 100%;
+	height: 470px;
+	color: white;
+	background-color: #343b5e;
+	overflow: hidden;
+}
+
+#footer .wrap > div {
+	float: left;
+	width: 320px;
+	height: 370px;
+	margin: 40px;
+	text-align: center;
+	color: white;
+	font-family: "Cutive", serif;
+}
+
+#footer a {
+	color: #6cdafa;
+	text-decoration: none;
+	transition: all 300ms;
+}
+
+#footer h5 {
+	display: block;
+	height: 50px;
+	margin-top: 25px;
+	margin-bottom: 20px;
+	line-height: 50px;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 27px;
+	font-family: "Oxygen", sans-serif;
+	color: #284180;
+	font-weight: bold;
+	letter-spacing: 2px;
+	background: #bec9cb;
+	box-shadow: 0px 1px 0px white, 1px 2px 0px white, 2px 3px 0px white,
+		3px 4px 0px white;
+	text-shadow: 2px 0px 1px white;
+}
+
+#footer ul {
+	text-align: left;
+	margin: 20px;
+	font-size: 18px;
+}
+
+#footer ul li {
+	margin-top: 10px;
+	padding: 5px;
+	border-bottom: 1px solid #ccc;
+}
+
+#footer ul li a {
+	display: block;
+	height: 40px;
+}
+
+#footer iframe {
+	width: 100%;
+	height: 300px;
+	margin-top: 10px;
+	border-radius: 5px;
+	border: 5px solid white;
+	box-shadow: 0px 0px 5px grey;
+}
+
+#footer #browsers a img {
+	width: 35px;
+	height: 35px;
+}
+
+#footer #author {
+	float: left;
+}
+
+#footer #author img {
+	width: 30px;
+	height: 30px;
+}
+
+#footer #copyright {
+	font-size: 12px;
+	font-family: "Atkinson Hyperlegible", sans-serif;
+	text-transform: uppercase;
+	line-height: 35px;
 }
