--- a/HTML5, CSS3 - AVANZADO/assets/css/styles.css
+++ b/HTML5, CSS3 - AVANZADO/assets/css/styles.css
@@ -1,14 +1,8 @@
-/* LOGO */
+/* FUENTES */
 @import url("https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap");
-
-/* NAVBAR */
 @import url("https://fonts.googleapis.com/css2?family=Cutive&display=swap");
-
-/* TARJETAS */
 @import url("https://fonts.googleapis.com/css2?family=Gruppo&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap");
-
-/* SECCION PRINCIPAL */
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap");
 
 @font-face {
@@ -65,7 +59,13 @@ body {
 	letter-spacing: 1px;
 	cursor: pointer;
 	overflow: hidden;
-	transition: all 300ms;
+	transition: all 100ms;
+}
+
+#logo:hover {
+	border-radius: 2px;
+	color: black;
+	background-color: #b3e4e8;
 }
 
 #logo .gear {
@@ -75,6 +75,35 @@ body {
 	font-family: "icons";
 	margin-top: 8px;
 	margin-left: 20px;
+	animation-name: rotate-gear;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+@keyframes rotate-gear {
+	from {
+		transform: rotateZ(0deg);
+	}
+	to {
+		transform: rotateZ(360deg);
+	}
+}
+
+#logo:hover .gear {
+	animation: rotate-gear 2s linear infinite, fromBellow 700ms linear;
+}
+
+@keyframes fromBellow {
+	0% {
+		transform: translateY(0%);
+	}
+	50% {
+		transform: translateY(200%);
+	}
+	100% {
+		transform: translateY(0%);
+	}
 }
 
 #logo h3 {
@@ -85,6 +114,19 @@ body {
 	margin-top: 4px;
 	margin-right: 30px;
 	transition: all 300ms;
+}
+
+#logo:hover h3 {
+	animation: fromRight 500ms linear;
+}
+
+@keyframes fromRight {
+	from {
+		transform: translateX(200%);
+	}
+	to {
+		transform: translateX(0%);
+	}
 }
 
 /* BARRA DE NAVEGACION */
@@ -518,7 +560,7 @@ body {
 	margin-top: 10px;
 	border-radius: 5px;
 	border: 5px solid white;
-	box-shadow: 0px 0px 5px grey;
+	box-shadow: 0px 0px 5px white;
 }
 
 #footer #browsers a img {
