--- a/HTML5, CSS3 - AVANZADO/assets/css/styles.css
+++ b/HTML5, CSS3 - AVANZADO/assets/css/styles.css
@@ -480,6 +480,42 @@ body {
 	text-decoration: none;
 }
 
+#social .overlay {
+	display: block;
+	position: absolute;
+	height: 20px;
+	padding: 5px;
+	margin-top: -40px;
+	margin-left: 70px;
+	font-weight: bold;
+	letter-spacing: 1px;
+	text-shadow: 0px 0px 1px #ccc;
+	border: 3px solid white;
+	box-shadow: 0px 0px 4px #ccc;
+	background: #f4f7fe;
+	transform: translateX(-80%);
+	opacity: 0;
+	transition: all 400ms;
+}
+
+#social div:hover .overlay {
+	transform: translateX(0%);
+	opacity: 1;
+	cursor: pointer;
+}
+
+#social div:first-child:hover a {
+	color: #1da1f2;
+}
+
+#social div:nth-child(2):hover a {
+	color: #1877f2;
+}
+
+#social div:last-child:hover a {
+	color: #ff0000;
+}
+
 #sponsors {
 	height: 185px;
 }
