--- a/HTML5, CSS3 - AVANZADO/assets/css/styles.css
+++ b/HTML5, CSS3 - AVANZADO/assets/css/styles.css
@@ -602,6 +602,40 @@ body {
 	margin-top: 60px;
 	line-height: 100px;
 	text-align: center;
+	transition: all 300ms;
+}
+
+#blog:hover {
+	border: 10px solid #b3e4e8;
+	border-radius: 240px;
+	box-shadow: 0px 0px 10px gray;
+	cursor: pointer;
+	background: #284180;
+	animation: blinked 6s infinite linear;
+}
+
+@keyframes blinked {
+	0% {
+		border: 10px solid #b3e4e8;
+	}
+	17% {
+		border: 10px solid #a9d1e8;
+	}
+	34% {
+		border: 10px solid #9bb3eb;
+	}
+	50% {
+		border: 10px solid #6484d5;
+	}
+	67% {
+		border: 10px solid #809fe8;
+	}
+	84% {
+		border: 10px solid #77c4ed;
+	}
+	100% {
+		border: 10px solid #b3e4e8;
+	}
 }
 
 #blog a {
@@ -615,10 +649,11 @@ body {
 	transition: all 300ms;
 }
 
-#blog a:hover {
-	color: #61a8ed;
+#blog:hover a {
+	color: white;
 	font-weight: bold;
-	text-shadow: 2px 0px 2px #2b79a4;
+	text-shadow: 1px 1px 1px #2b79a4, 1px 2px 1px #2b79a4, 1px 3px 1px #2b79a4,
+		1px 4px 1px #2b79a4, 1px 5px 1px #2b79a4, 1px 6px 1px #2b79a4;
 }
 
 /* FOOTER */
@@ -680,6 +715,13 @@ body {
 #footer ul li a {
 	display: block;
 	height: 40px;
+	transition: all 300ms;
+}
+
+#footer ul li:hover a {
+	padding-left: 40px;
+	color: white;
+	text-shadow: 1px 1px 1px #6cdafa;
 }
 
 #footer iframe {
