--- a/HTML5, CSS3 - FLEXBOX/assets/styles.css
+++ b/HTML5, CSS3 - FLEXBOX/assets/styles.css
@@ -60,5 +60,40 @@
   background: #ccc;
   color: white;
 }
+#container #content {
+  display: flex;
+  justify-content: space-between;
+}
+#container #content #projects {
+  display: flex;
+  flex-flow: row wrap;
+  flex-basis: 80%;
+  justify-content: space-between;
+}
+#container #content #projects .project {
+  flex-grow: 1;
+  flex-basis: 250px;
+  margin-right: 20px;
+  margin-bottom: 25px;
+  border: 1px solid #ccc;
+}
+#container #content #projects .project img {
+  width: 100%;
+}
+#container #content #projects .project .project-info {
+  padding: 10px;
+}
+#container #content #projects .project .project-info a {
+  font-size: 16px;
+  color: black;
+  transition: all 300ms;
+}
+#container #content #projects .project .project-info a:hover {
+  color: forestgreen;
+}
+#container #content #projects .project .project-info p {
+  font-size: 16px;
+  color: gray;
+}
 
 /*# sourceMappingURL=styles.css.map */
