--- a/HTML5, CSS3 - FLEXBOX/assets/styles.scss
+++ b/HTML5, CSS3 - FLEXBOX/assets/styles.scss
@@ -69,4 +69,47 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 			}
 		}
 	}
+
+	#content {
+		display: flex;
+		justify-content: space-between;
+
+		#projects {
+			display: flex;
+			flex-flow: row wrap;
+			flex-basis: 80%;
+			justify-content: space-between;
+
+			.project {
+				flex-grow: 1;
+				flex-basis: 250px;
+				margin-right: 20px;
+				margin-bottom: 25px;
+				border: 1px solid #ccc;
+
+				img {
+					width: 100%;
+				}
+
+				.project-info {
+					padding: 10px;
+
+					a {
+						font-size: 16px;
+						color: black;
+						transition: all 300ms;
+					}
+
+					a:hover {
+						color: forestgreen;
+					}
+
+					p {
+						font-size: 16px;
+						color: gray;
+					}
+				}
+			}
+		}
+	}
 }
