--- a/HTML5, CSS3 - FLEXBOX/assets/styles.scss
+++ b/HTML5, CSS3 - FLEXBOX/assets/styles.scss
@@ -111,5 +111,47 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 				}
 			}
 		}
+
+		#sidebar {
+			display: flex;
+			flex-flow: column wrap;
+			flex-basis: 15%;
+			margin-right: 30px;
+			padding: 15px;
+
+			h2 {
+				display: block;
+				width: 100%;
+				font-size: 18px;
+				font-weight: 100;
+				color: #444;
+				padding-bottom: 10px;
+				margin-bottom: 20px;
+				border-bottom: $border;
+			}
+
+			ul {
+				list-style: none;
+
+				li {
+					padding-bottom: 20px;
+				}
+			}
+
+			a {
+				display: block;
+				padding: 20px;
+				background: #eee;
+				color: #444;
+				text-align: center;
+				text-transform: uppercase;
+				transition: all 300ms;
+			}
+
+			a:hover {
+				background: #444;
+				color: #eee;
+			}
+		}
 	}
 }
