--- a/HTML5, CSS3 - FLEXBOX/assets/styles.scss
+++ b/HTML5, CSS3 - FLEXBOX/assets/styles.scss
@@ -18,6 +18,21 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 	margin-bottom: 40px;
 	min-height: 600px;
 
+	.logo {
+		flex-grow: 1;
+		flex-basis: 65%;
+		padding: 10px;
+		margin-left: 20px;
+
+		h1 {
+			font-family: Helvetica;
+			font-style: italic;
+			font-weight: 900;
+			font-size: 35px;
+			text-shadow: 1px 1px 0px #ccc;
+		}
+	}
+
 	#header {
 		display: flex;
 		flex-direction: row;
@@ -25,21 +40,6 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 		align-items: center;
 		height: 120px;
 		border: $border;
-
-		#logo {
-			flex-grow: 1;
-			flex-basis: 65%;
-			padding: 10px;
-			margin-left: 20px;
-
-			h1 {
-				font-family: Helvetica;
-				font-style: italic;
-				font-weight: 900;
-				font-size: 35px;
-				text-shadow: 1px 1px 0px #ccc;
-			}
-		}
 
 		#menu {
 			flex-grow: 1;
@@ -152,6 +152,31 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 				background: #444;
 				color: #eee;
 			}
+		}
+	}
+
+	#footer {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: flex-start;
+		height: 120px;
+		align-items: center;
+		border-top: $border;
+
+		.logo {
+			order: 2;
+			opacity: 0.5;
+			flex-basis: auto;
+			flex-grow: 1;
+			margin-right: 20px;
+		}
+
+		.info {
+			order: 1;
+			flex-grow: 1;
+			text-transform: uppercase;
+			margin-left: 20px;
+			color: #444;
 		}
 	}
 }
