--- a/HTML5, CSS3 - FLEXBOX/assets/styles.scss
+++ b/HTML5, CSS3 - FLEXBOX/assets/styles.scss
@@ -1,182 +1,2 @@
-* {
-	text-decoration: none;
-	margin: 0px;
-	padding: 0px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-$border: 1px solid rgba(225, 225, 226, 0.8);
-
-#container {
-	width: 90%;
-	height: auto;
-	margin: 0px auto;
-	border: $border;
-	box-shadow: 0px 0px 10px #ccc;
-	margin-top: 40px;
-	margin-bottom: 40px;
-	min-height: 600px;
-
-	.logo {
-		flex-grow: 1;
-		flex-basis: 65%;
-		padding: 10px;
-		margin-left: 20px;
-
-		h1 {
-			font-family: Helvetica;
-			font-style: italic;
-			font-weight: 900;
-			font-size: 35px;
-			text-shadow: 1px 1px 0px #ccc;
-		}
-	}
-
-	#header {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		align-items: center;
-		height: 120px;
-		border: $border;
-
-		#menu {
-			flex-grow: 1;
-			flex-basis: 30%;
-			height: 100%;
-			padding-right: 20px;
-
-			> ul {
-				display: flex;
-				flex-flow: row, wrap;
-				align-items: center;
-				justify-content: space-between;
-				height: 100%;
-				list-style: none;
-			}
-
-			a {
-				color: #444;
-				text-transform: uppercase;
-				padding: 15px;
-				transition: all 300ms;
-			}
-
-			a:hover {
-				background: #ccc;
-				color: white;
-			}
-		}
-	}
-
-	#content {
-		display: flex;
-		justify-content: space-between;
-
-		#projects {
-			display: flex;
-			flex-flow: row wrap;
-			flex-basis: 80%;
-			justify-content: space-between;
-
-			.project {
-				flex-grow: 1;
-				flex-basis: 250px;
-				margin-right: 20px;
-				margin-bottom: 25px;
-				border: 1px solid #ccc;
-
-				img {
-					width: 100%;
-				}
-
-				.project-info {
-					padding: 10px;
-
-					a {
-						font-size: 16px;
-						color: black;
-						transition: all 300ms;
-					}
-
-					a:hover {
-						color: forestgreen;
-					}
-
-					p {
-						font-size: 16px;
-						color: gray;
-					}
-				}
-			}
-		}
-
-		#sidebar {
-			display: flex;
-			flex-flow: column wrap;
-			flex-basis: 15%;
-			margin-right: 30px;
-			padding: 15px;
-
-			h2 {
-				display: block;
-				width: 100%;
-				font-size: 18px;
-				font-weight: 100;
-				color: #444;
-				padding-bottom: 10px;
-				margin-bottom: 20px;
-				border-bottom: $border;
-			}
-
-			ul {
-				list-style: none;
-
-				li {
-					padding-bottom: 20px;
-				}
-			}
-
-			a {
-				display: block;
-				padding: 20px;
-				background: #eee;
-				color: #444;
-				text-align: center;
-				text-transform: uppercase;
-				transition: all 300ms;
-			}
-
-			a:hover {
-				background: #444;
-				color: #eee;
-			}
-		}
-	}
-
-	#footer {
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: flex-start;
-		height: 120px;
-		align-items: center;
-		border-top: $border;
-
-		.logo {
-			order: 2;
-			opacity: 0.5;
-			flex-basis: auto;
-			flex-grow: 1;
-			margin-right: 20px;
-		}
-
-		.info {
-			order: 1;
-			flex-grow: 1;
-			text-transform: uppercase;
-			margin-left: 20px;
-			color: #444;
-		}
-	}
-}
+@use 'general';
+@use 'responsive';
