--- a/HTML5, CSS3 - GRID/assets/_general.scss
+++ b/HTML5, CSS3 - GRID/assets/_general.scss
@@ -19,11 +19,6 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 	min-height: 600px;
 
 	.logo {
-		flex-grow: 1;
-		flex-basis: 65%;
-		padding: 10px;
-		margin-left: 20px;
-
 		h1 {
 			font-family: Helvetica;
 			font-style: italic;
@@ -34,24 +29,23 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 	}
 
 	#header {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
+		display: grid;
+		grid-template-columns: 68% 30%;
 		align-items: center;
+		width: 100%;
 		height: 120px;
 		border: $border;
 
 		#menu {
-			flex-grow: 1;
-			flex-basis: 30%;
+			width: 100%;
 			height: 100%;
 			padding-right: 20px;
 
 			> ul {
-				display: flex;
-				flex-flow: row wrap;
+				display: grid;
+				grid-template-columns: repeat(4, 1fr);
 				align-items: center;
-				justify-content: space-between;
+				justify-content: center;
 				height: 100%;
 				list-style: none;
 			}
@@ -71,18 +65,8 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 	}
 
 	#content {
-		display: flex;
-		justify-content: space-between;
-
 		#projects {
-			display: flex;
-			flex-flow: row wrap;
-			flex-basis: 80%;
-			justify-content: space-between;
-
 			.project {
-				flex-grow: 1;
-				flex-basis: 250px;
 				margin-right: 20px;
 				margin-bottom: 25px;
 				border: 1px solid #ccc;
@@ -113,9 +97,6 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 		}
 
 		#sidebar {
-			display: flex;
-			flex-flow: column wrap;
-			flex-basis: 15%;
 			margin-right: 30px;
 			padding: 15px;
 
@@ -156,9 +137,6 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 	}
 
 	#footer {
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: flex-start;
 		height: 120px;
 		align-items: center;
 		border-top: $border;
@@ -166,14 +144,13 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 		.logo {
 			order: 2;
 			opacity: 0.5;
-			flex-basis: auto;
-			flex-grow: 1;
+
 			margin-right: 20px;
 		}
 
 		.info {
 			order: 1;
-			flex-grow: 1;
+
 			text-transform: uppercase;
 			margin-left: 20px;
 			color: #444;
