--- a/HTML5, CSS3 - GRID/assets/styles.css
+++ b/HTML5, CSS3 - GRID/assets/styles.css
@@ -15,12 +15,6 @@
   margin-bottom: 40px;
   min-height: 600px;
 }
-#container .logo {
-  flex-grow: 1;
-  flex-basis: 65%;
-  padding: 10px;
-  margin-left: 20px;
-}
 #container .logo h1 {
   font-family: Helvetica;
   font-style: italic;
@@ -29,24 +23,23 @@
   text-shadow: 1px 1px 0px #ccc;
 }
 #container #header {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 68% 30%;
   align-items: center;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(225, 225, 226, 0.8);
 }
 #container #header #menu {
-  flex-grow: 1;
-  flex-basis: 30%;
+  width: 100%;
   height: 100%;
   padding-right: 20px;
 }
 #container #header #menu > ul {
-  display: flex;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   height: 100%;
   list-style: none;
 }
@@ -60,19 +53,7 @@
   background: #ccc;
   color: white;
 }
-#container #content {
-  display: flex;
-  justify-content: space-between;
-}
-#container #content #projects {
-  display: flex;
-  flex-flow: row wrap;
-  flex-basis: 80%;
-  justify-content: space-between;
-}
 #container #content #projects .project {
-  flex-grow: 1;
-  flex-basis: 250px;
   margin-right: 20px;
   margin-bottom: 25px;
   border: 1px solid #ccc;
@@ -96,9 +77,6 @@
   color: gray;
 }
 #container #content #sidebar {
-  display: flex;
-  flex-flow: column wrap;
-  flex-basis: 15%;
   margin-right: 30px;
   padding: 15px;
 }
@@ -132,9 +110,6 @@
   color: #eee;
 }
 #container #footer {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
   height: 120px;
   align-items: center;
   border-top: 1px solid rgba(225, 225, 226, 0.8);
@@ -142,13 +117,10 @@
 #container #footer .logo {
   order: 2;
   opacity: 0.5;
-  flex-basis: auto;
-  flex-grow: 1;
   margin-right: 20px;
 }
 #container #footer .info {
   order: 1;
-  flex-grow: 1;
   text-transform: uppercase;
   margin-left: 20px;
   color: #444;
