--- a/HTML5, CSS3 - GRID/assets/_general.scss
+++ b/HTML5, CSS3 - GRID/assets/_general.scss
@@ -53,7 +53,7 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 			a {
 				color: #444;
 				text-transform: uppercase;
-				padding: 15px;
+				padding: 20px;
 				transition: all 300ms;
 			}
 
@@ -65,7 +65,17 @@ $border: 1px solid rgba(225, 225, 226, 0.8);
 	}
 
 	#content {
+		display: grid;
+		grid-template-columns: 20% 1fr;
+		align-items: start;
+		justify-content: space-between;
+		column-gap: 25px;
+
 		#projects {
+			display: grid;
+			grid-template-columns: repeat(auto-fill, 250px);
+			gap: 21px;
+
 			.project {
 				margin-right: 20px;
 				margin-bottom: 25px;
