--- a/HTML5, CSS3 - GRID/assets/styles.css
+++ b/HTML5, CSS3 - GRID/assets/styles.css
@@ -122,6 +122,10 @@
   color: #eee;
 }
 #container #footer {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  align-items: center;
+  justify-content: baseline;
   height: 120px;
   align-items: center;
   border-top: 1px solid rgba(225, 225, 226, 0.8);
