Aplicando Responsive Design

--- a/HTML5, CSS3 - GRID/assets/_responsive.scss
+++ b/HTML5, CSS3 - GRID/assets/_responsive.scss
@@ -1,67 +1,163 @@
-@media (max-width: 1375px) {
+@media (max-width: 1511px) {
 	#container {
-		.logo {
-			flex-basis: 60%;
-		}
+		#content {
+			column-gap: 20px;
 
-		#menu {
-			flex-basis: 35%;
+			#projects {
+				gap: 12px;
+			}
 		}
 	}
 }
-@media (max-width: 1277px) {
+@media (max-width: 1467px) {
 	#container {
-		.logo {
-			flex-basis: 55%;
-		}
-
-		#menu {
-			flex-basis: 40%;
+		#content {
+			#projects {
+				gap: 10px;
+			}
 		}
 	}
 }
-@media (max-width: 1192px) {
+@media (max-width: 1458px) {
 	#container {
-		.logo {
-			flex-basis: 50%;
-		}
-
-		#menu {
-			flex-basis: 45%;
+		#content {
+			column-gap: 12px;
 		}
 	}
 }
-@media (max-width: 1117px) {
+@media (max-width: 1415px) {
 	#container {
-		.logo {
-			flex-basis: 45%;
-		}
-	}
-}
-@media (max-width: 1052px) {
-	#container {
-		.logo {
-			flex-basis: 40%;
-		}
-
-		#menu {
-			flex-basis: 50%;
-		}
-	}
-}
-@media (max-width: 993px) {
-	#container {
-		#header {
-			text-align: center;
+		#footer {
+			grid-template-columns: auto 27%;
 
 			.logo {
-				flex-basis: 65%;
+				text-align: center;
 			}
-			#menu > ul {
-				margin-top: 10px;
-				flex-basis: 30%;
-				align-items: flex-start;
-				justify-content: space-evenly;
+		}
+	}
+}
+@media (max-width: 1251px) {
+	#container {
+		#header {
+			grid-template-columns: auto 35%;
+		}
+	}
+}
+@media (max-width: 1186px) {
+	#container {
+		#header {
+			grid-template-columns: auto 40%;
+		}
+	}
+}
+@media (max-width: 1086px) {
+	#container {
+		#content {
+			grid-template-columns: 22% 1fr;
+
+			#projects {
+				grid-template-columns: repeat(auto-fill, 225px);
+			}
+		}
+	}
+}
+@media (max-width: 1056px) {
+	#container {
+		#header {
+			grid-template-columns: auto 45%;
+		}
+		#content {
+			grid-template-columns: 22% 1fr;
+
+			#projects {
+				grid-template-columns: repeat(auto-fill, 215px);
+			}
+		}
+		#footer {
+			grid-template-columns: auto 32%;
+		}
+	}
+}
+@media (max-width: 965px) {
+	#container {
+		#header {
+			grid-template-columns: auto 55%;
+		}
+		#content {
+			grid-template-columns: 25% 1fr;
+
+			#projects {
+				grid-template-columns: repeat(auto-fill, 195px);
+			}
+		}
+		#footer {
+			grid-template-columns: auto 35%;
+		}
+	}
+}
+@media (max-width: 915px) {
+	#container {
+		#content {
+			#projects {
+				grid-template-columns: repeat(auto-fill, 185px);
+			}
+		}
+	}
+}
+@media (max-width: 870px) {
+	#container {
+		#header {
+			grid-template-columns: 100%;
+			align-items: center;
+			justify-content: center;
+			height: 140px;
+			padding-bottom: 20px;
+
+			.logo {
+				text-align: center;
+			}
+
+			#menu {
+				> ul {
+					justify-items: center;
+				}
+			}
+		}
+		#content {
+			grid-template-columns: 1fr;
+
+			#sidebar {
+				margin: 0px;
+
+				h2 {
+					text-align: center;
+				}
+
+				ul {
+					display: grid;
+					grid-template-columns: repeat(2, 1fr);
+					gap: 5px;
+				}
+			}
+			#projects {
+				grid-template-columns: repeat(2, 1fr);
+
+				.project {
+					margin-left: 10px;
+					margin-right: 10px;
+				}
+			}
+		}
+		#footer {
+			grid-template-columns: 1fr;
+			justify-items: center;
+
+			.logo {
+				order: 1;
+			}
+
+			.info {
+				order: 2;
 			}
 		}
 	}
@@ -69,97 +165,122 @@
 @media (max-width: 768px) {
 	#container {
 		#content {
-			flex-direction: column;
-
 			#sidebar {
-				flex-basis: 100%;
-				margin-right: 0px;
-
-				h2 {
-					text-align: center;
-				}
-
 				ul {
-					display: flex;
-					flex-flow: row wrap;
-					justify-content: space-evenly;
+					grid-template-columns: repeat(4, 1fr);
+				}
+			}
+		}
+	}
+}
+@media (max-width: 495px) {
+	#container {
+		#content {
+			#sidebar {
+				ul {
+					gap: 10px;
+				}
+			}
+			#projects {
+				grid-template-columns: 1fr;
+			}
+		}
+	}
+}
+@media (max-width: 458px) {
+	#container {
+		#content {
+			justify-content: center;
+
+			#projects {
+				grid-template-columns: 360px;
+				justify-content: center;
+			}
+		}
+	}
+}
+@media (max-width: 430px) {
+	#container {
+		.logo h1 {
+			font-size: 28px;
+		}
+		#header {
+			#menu {
+				a {
+					font-size: 14px;
+				}
+			}
+		}
+		#content {
+			#sidebar {
+				ul {
+					grid-template-columns: repeat(2, 1fr);
+				}
+			}
+			#projects {
+				grid-template-columns: 310px;
+			}
+		}
+		#footer {
+			.info {
+				font-size: small;
+			}
+		}
+	}
+}
+@media (max-width: 385px) {
+	#container {
+		#header {
+			height: 200px;
+
+			.logo {
+				text-align: start;
+			}
+
+			#menu {
+				ul {
+					grid-template-columns: 1fr;
+					justify-items: start;
+				}
+			}
+		}
+		#footer {
+			.info {
+				text-align: start;
+				margin-left: 0px;
+			}
+		}
+	}
+}
+@media (max-width: 335px) {
+	#container {
+		#content {
+			#sidebar {
+				ul {
+					grid-template-columns: 1fr;
+					gap: 0px;
 
 					li {
-						flex-grow: 1;
-						margin-left: 5px;
-						margin-right: 5px;
+						padding-bottom: 5px;
 					}
 				}
 			}
 			#projects {
-				flex-basis: 100%;
-
-				.project {
-					margin-right: 15px;
-					margin-left: 15px;
-				}
-			}
-		}
-		#footer {
-			.logo {
-				order: 1;
-				flex-grow: 1;
-				flex-basis: 100%;
-				text-align: center;
-				margin: 0px;
-			}
-			.info {
-				order: 2;
-				flex-grow: 1;
-				flex-basis: 100%;
-				text-align: center;
-				margin: 0px;
-			}
-		}
-	}
-}
-@media (max-width: 437px) {
-	#container {
-		.logo h1 {
-			font-size: 24px;
-		}
-		#header {
-			#menu ul a {
-				font-size: 14px;
+				grid-template-columns: 275px;
 			}
 		}
 		#footer {
 			.info {
-				font-size: 13px;
+				font-size: x-small;
 			}
 		}
 	}
 }
-@media (max-width: 402px) {
+@media (max-width: 300px) {
 	#container {
-		#header {
-			height: 190px;
-			.logo {
-				margin-left: 0px;
-				text-align: start;
-			}
-			#menu {
-				height: 80%;
-				justify-content: space-between;
-
-				ul {
-					flex-direction: column;
-					height: 70%;
-				}
-			}
-		}
-	}
-}
-@media (max-width: 340px) {
-	#container {
-		#footer {
-			.info {
-				font-size: 12px;
+		#content {
+			#projects {
+				grid-template-columns: 250px;
 			}
 		}
 	}
